--- a/items/staticfiles/css/items_form_retirar.css
+++ b/items/staticfiles/css/items_form_retirar.css
@@ -51,7 +51,7 @@ main .container .menu-btn .btn-save {
   width: 50%;
 }
 
-main .container .emnu-btn .btn-cancelar {
+main .container .menu-btn .btn-cancelar {
   width: 50%;
 }
 
