--- a/items/templates/items/pag_subs_category/items_descarte.html
+++ b/items/templates/items/pag_subs_category/items_descarte.html
@@ -66,6 +66,6 @@
     {% else %}
         <p class="notifications_no_items">Não há itens associados a categoria <strong>Descarte</strong>.</p>
     {% endif %}
-    <a href="{% url 'items_main' %}" class="btn btn-delete">Voltar para página inicial</a>
+    <a href="{% url 'items_main' %}" class="btn btn-cancelar">Voltar para página inicial</a>
   </div>
 {% endblock %}
