--- a/items/staticfiles/css/items_search.css
+++ b/items/staticfiles/css/items_search.css
@@ -1,121 +1,107 @@
+body {
+  overflow: hidden;
+}
+
 main {
+  margin-top: 0px;
+  display: flex;
+  flex-direction: row;
   height: 100%;
-  padding: 20px;
-  display: block;
+  justify-content: start;
 }
 
-.search-bar, 
-.container-download {
-  width: 70%;
-  margin: 0 auto;
-  margin-bottom: 15px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 8px;
-  padding: 10px 15px;
-  background-color: #007bff;
-  color: white;
-  border: none;
-  border-radius: 4px;
-}
 
-.form-search {
-  width: 70%;
-  margin: 0 auto;
-}
-
-h1 {
-  text-align: center;
-  font-weight: 400;
-  margin-bottom: 30px;
-}
-
-.form-search input[type="text"] {
-  height: 50%;
-  margin-right: 5px;
-  font-size: 20px;
-}
-
-.form-search label {
-  width: 100%;
-  display: flex;
-  font-size: 20px;
-  font-weight: 600;
-  color: black;
-  text-align: start;
-  margin-top: 10px;
-}
-
-.form-search .btn-save {
-  margin-top: 10px;
-}
-
-.btn-download {
-  background-color: #007bff;
-  color: white;
-  padding: 0;
-  margin: 0;
-}
-
-.expandable-list {
-  width: 70%;
-  margin: 0 auto;
-  padding: 40px;
-  box-shadow: 0px 1px 8px 8px rgba(0, 0, 0, 0.1);
-  border: 1px solid #ccc;
-  border-radius: 5px;
-}
-
-.expandable-list .alert-init {
-  font-size: x-large;
-  text-align: center;
-  font-weight: bold;
-}
-
-.expandable-list .content.open {
+main .containerSearch {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  gap: 10px;
+  padding: 20px;
+  background-color: #75849631;
 }
 
-.main .dados_items {
-  display: flex;
-  font-size: 20px;
-  padding: 10px;
-  margin-bottom: 5px;
+main .containerSearch h1 {
+  font-size: 2rem;
 }
 
-.main .description span {
-  font-weight: bold;
+main .containerSearch form {
+  gap: 10px;
 }
 
-.item-row {
+main .containerSearch form label {
+  margin-bottom: 10px;
+}
+
+main .containerSearch form input[type="text"] {
+  margin-bottom: 20px;
+  margin-top: 0px;
+}
+
+main .containerSearch form button {
+  margin: 0px;
+  background-color: green;
+  cursor: pointer;
+}
+
+main .containerSearch form a {
+  background-color: red;
+  margin: 0px;
+}
+
+main .containerSearch form .btn-download {
+  background-color: #007bff;
+}
+
+main .expandable-list {
+  width: 75%;
+  padding: 40px;
+  overflow-y: scroll;
+}
+
+main .expandable-list .alert-init {
+  font-size: x-large;
+  text-align: center;
+  font-weight: 600;
+}
+
+main .expandable-list .item {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px;
   border-bottom: 1px solid #ddd;
 }
 
-.menu-btn {
+main .expandable-list .item .description {
+  display: flex;
+  flex-direction: column;
+  font-size: 20px;
+  margin: 20px 0;
+  gap: 10px;
+}
+
+main .expandable-list .item .description span {
+  font-weight: 600;
+}
+
+main .expandable-list .item .menuContainer {
+  display: block;
+}
+
+main .expandable-list .item .menuContainer button {
   background: transparent;
   border: none;
   font-size: 24px;
   cursor: pointer;
 }
 
-.menu-content {
-  display: none;
-  position: absolute;
-  background-color: white;
-  border: 1px solid #ddd;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+main .expandable-list .item .containerAcoes {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
   padding: 10px;
   width: 300px;
 }
 
-.menu-content a {
+main .expandable-list .item .containerAcoes a {
   display: block;
   text-decoration: none;
   padding: 10px;
@@ -123,142 +109,25 @@ h1 {
   color: #000;
 }
 
-.btn {
-  font-size: 20px;
-  padding: 5px;
-  cursor: pointer;
-  border: none;
-}
 
-main .btn {
-  margin: 0;
-}
-
-.btn-visualizar {
+main .expandable-list .item .containerAcoes .btn-visualizar {
   background-color: #4842548a;
 }
 
-.btn-delete {
+main .expandable-list .item .containerAcoes .btn-delete {
   background-color: red;
 }
 
-.btn-edit {
+main .expandable-list .item .containerAcoes .btn-edit {
   background-color: #007bff;
 }
 
-.btn-retirar {
+main .expandable-list .item .containerAcoes .btn-retirar {
   background-color: green;
 }
 
-.btn:hover {
-  background-color: #424a53;
-}
-
-.btn i {
-  margin: auto 0;
-  display: flex;
-  flex-direction: row;
-  gap: 10px;
-}
-
-.btn-cadastrar {
-  background-color: green;
-  display: flex;
-  justify-content: space-around;
-  width: 300px;
-  font-size: 20px;
-  font-weight: 500;
-}
-
-.btn.disabled {
+main .expandable-list .item .containerAcoes .btn.disabled {
   pointer-events: none;
   cursor: default;
   opacity: 0.5;
-}
-
-@media (max-width: 1024px) {
-  main {
-    margin: 20px;
-  }
-
-  .expandable-list,
-  input[type="text"],
-  table {
-    width: 90%;
-  }
-
-  input[type="text"] {
-    font-size: 18px;
-  }
-
-  .btn,
-  .menu-content a {
-    font-size: 18px;
-  }
-
-  .expandable-list {
-    padding: 20px;
-  }
-}
-
-@media (max-width: 768px) {
-  main {
-    margin: 10px;
-  }
-
-  form {
-    flex-direction: column;
-  }
-
-  input[type="text"] {
-    width: 100%;
-    margin-bottom: 10px;
-  }
-
-  .expandable-list {
-    width: 100%;
-    padding: 20px;
-  }
-
-  .menu-content {
-    width: 100%;
-    position: relative;
-  }
-
-  .btn,
-  .menu-content a {
-    font-size: 16px;
-  }
-}
-
-@media (max-width: 480px) {
-  .expandable-list,
-  input[type="text"],
-  .btn-cadastrar {
-    width: 100%;
-  }
-
-  input[type="text"] {
-    font-size: 16px;
-  }
-
-  .btn {
-    font-size: 16px;
-    padding: 8px;
-  }
-
-  .btn-cadastrar {
-    font-size: 18px;
-    padding: 10px;
-  }
-
-  .menu-content {
-    width: 100%;
-    font-size: 16px;
-  }
-
-  .expandable-list h1,
-  .alert-init {
-    font-size: 24px;
-  }
 }
