Padronização dos arquivos items_historico.html e items_historico.css

--- a/items/staticfiles/css/base.css
+++ b/items/staticfiles/css/base.css
@@ -147,13 +147,15 @@ main .containerSearch form button {
 }
 
 
-main .container .btn-save {
+main .container .btn-save,
+main .containerSearch .btn-save {
   background-color: green;
   color: black;
 }
 
 main .container .btn-cancelar,
-main .container .btn-delete {
+main .container .btn-delete,
+main .containerSearch .btn-cancelar {
   background-color: red;
   color: black;
 }
