--- a/items/templates/registration/login.html
+++ b/items/templates/registration/login.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="{% static 'css/login.css' %}">
 {% endblock %}
 
-{% block content %} 
-  <div class="container-main">
+{% block main %} 
+  <div class="container">
     <h1>Login</h1>
     <form method="post">
         {% csrf_token %}
