--- a/items/templates/items/items_main.html
+++ b/items/templates/items/items_main.html
@@ -9,6 +9,9 @@
 
 {% block main %}
 
+  {% comment %} <div>
+    <img src="data:image/png;base64,{{ chart_img }}" alt="Gráfico Radar">
+  </div> {% endcomment %}
   <div class="container">
     <h1>Lista de Itens</h1>
     {% if items_list %}
