--- a/items/staticfiles/css/items_search.css
+++ b/items/staticfiles/css/items_search.css
@@ -54,6 +54,7 @@ main .containerSearch form .btn-download {
 main .expandable-list {
   width: 75%;
   padding: 40px;
+  margin-bottom: 50px;
   overflow-y: scroll;
 }
 
