--- a/items/templates/items/base.html
+++ b/items/templates/items/base.html
@@ -12,7 +12,10 @@
       {% block title %}{% endblock %}
     </title>
 
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"rel="stylesheet" />  {% comment%} Biblioteca de fontes {% endcomment %}
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"> {% comment%} Biblioteca de fontes {% endcomment %}
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/>                  {% comment%} Biblioteca de ícones {% endcomment %}
     <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}" />
 
