--- a/items/staticfiles/css/items_historico.css
+++ b/items/staticfiles/css/items_historico.css
@@ -4,13 +4,13 @@ body {
 
 main {
   margin-top: 0px;
-  display: flex;
-  flex-direction: row;
+  padding: 0px;
   height: 100%;
   justify-content: start;
 }
 
 main .containerSearch {
+  width: 700px;
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -83,64 +83,4 @@ main .containerHistorico table tbody tr:nth-child(even) {
 
 main .containerHistorico table tbody tr:hover {
   background-color: #e0e0e0;
-}
-
-/* Responsividade para telas menores */
-@media (max-width: 1024px) {
-  h1, .form-search, table {
-    width: 90%;
-  }
-
-  thead th {
-    font-size: 22px;
-  }
-
-  tbody td {
-    font-size: 18px;
-  }
-}
-
-@media (max-width: 768px) {
-  h1, .form-search, table {
-    width: 100%;
-  }
-
-  main {
-    padding: 20px;
-  }
-
-  .download-button {
-    padding-left: 0;
-  }
-
-  thead th {
-    font-size: 20px;
-    padding: 8px;
-  }
-
-  tbody td {
-    font-size: 16px;
-    padding: 8px;
-  }
-}
-
-@media (max-width: 480px) {
-  h1 {
-    font-size: 24px;
-    margin-top: 20px;
-  }
-
-  .download-button .btn {
-    padding: 8px 16px;
-  }
-
-  thead th {
-    font-size: 18px;
-    padding: 6px;
-  }
-
-  tbody td {
-    font-size: 14px;
-    padding: 6px;
-  }
 }
