--- a/items/staticfiles/css/items_search.css
+++ b/items/staticfiles/css/items_search.css
@@ -4,10 +4,8 @@ body {
 
 main {
   margin-top: 0px;
-  display: flex;
-  flex-direction: row;
   height: 100%;
-  justify-content: start;
+  padding: 0px;
 }
 
 
