Total de itens cadastrados sendo registradio em geração de pdf

--- a/items/templates/items/items_search.html
+++ b/items/templates/items/items_search.html
@@ -48,7 +48,10 @@
         {% if message %}
         <p class="alert-init">{{ message }}</p>
 
-        {% else %} 
+        {% else %}
+
+            <p>Total de itens cadastrados: {{ total_results }}</p>
+            
             {% for item in results %}
 
                 <div class="item">
