--- a/items/staticfiles/css/items_search.css
+++ b/items/staticfiles/css/items_search.css
@@ -62,6 +62,11 @@ main .expandable-list .alert-init {
   font-weight: 600;
 }
 
+main .expandable-list p:first-child{
+  font-size: 20px;
+  font-weight: 500;
+}
+
 main .expandable-list .item {
   display: flex;
   justify-content: space-between;
