--- a/items/templates/items/base.html
+++ b/items/templates/items/base.html
@@ -38,7 +38,7 @@
       </a>
 
       <div class="menu">
-
+        <a href="admin/">Administrador</a>
         <a href="{% url 'items_search' %}">Pesquisar</a>
         <a href="{% url 'items-auditLog' %}">Histórico</a>
         <form action="{% url 'logout' %}" method="post">
