--- a/items/templates/items/items_main.html
+++ b/items/templates/items/items_main.html
@@ -76,7 +76,7 @@
               {% if has_imoveis %}
                 <a href="{% url 'items_imoveis' "IMOVEIS" %}"> IMOVEIS</a>
               {% else %}
-                <a href="#" class="disabled-link">Não há nenhum item cadastrado na categoria <strong>IMOVEIS</strong></a>
+                <a href="#" class="disabled-link">Não há nenhum item cadastrado na categoria <strong>Imóveis</strong></a>
               {% endif %}
             </ul>
           </div>
