--- a/items/templates/items/items_main.html
+++ b/items/templates/items/items_main.html
@@ -74,7 +74,7 @@
                 <a href="#" class="disabled-link">Não há nenhum item cadastrado na categoria <strong>Ferramentas</strong></a>
               {% endif %}
               {% if has_imoveis %}
-                <a href="{% url 'items_imoveis' "IMOVEIS" %}"> IMOVEIS</a>
+                <a href="{% url 'items_imoveis' "IMOVEIS" %}"> Imóveis</a>
               {% else %}
                 <a href="#" class="disabled-link">Não há nenhum item cadastrado na categoria <strong>Imóveis</strong></a>
               {% endif %}
