--- a/items/templates/items/pag_subs_category/items_imoveis.html
+++ b/items/templates/items/pag_subs_category/items_imoveis.html
@@ -9,7 +9,7 @@
 
 {% block main %} 
   <div class="container">
-    <h1>{{ request.resolver_match.kwargs.category }}S</h1>
+    <h1>{{ request.resolver_match.kwargs.category }}</h1>
 
     {% if item_imoveis_list %}
       <form>
